<resources>
    <string name="app_name">Vision Book</string>

    <string-array name="itemsMenu">
        <item>Captured books</item>
        <item>Capture book</item>
        <item>About VisionBook</item>
    </string-array>

    <string name="llibres_capturats">Captured books</string>
    <string name="capturar_llibre">Capture book</string>
    <string name="sobre_app">About VisionBook</string>

    <string name="buscant_llibre">Searching book, don\'t move the device...</string>
    <string name="llibre_no_trobat">Book not found</string>
    <string name="sense_descripcio">Book without synopsis</string>
    <string name="editorial">"Publisher: "</string>
    <string name="num_pags">"Num. Pages: "</string>
    <string name="data_publicacio">"Publish date: "</string>
    <string name="sinopsis">"Synopsis: "</string>
    <string name="carregant1">Loading...</string>
    <string name="carregant2">Loading book...</string>
    <string name="buscant">Searching...</string>
    <string name="buscant_el_llibre">Searching book...</string>
    <string name="eliminar">Delete</string>
    <string name="book_deleted">Book deleted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_llibre_detall">LlibreDetall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal_menu">VisionBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirmacio_logout">Are you sure you want to log out?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="error_internet">Connection problem</string>
    <string name="info_no_libros">"It seems you haven\'t captured any book yet! \n Tab the rounded button or open the left menu to capture a book."</string>
    <string name="tancar_sesio">Logout</string>
    <string name="com_capturar">Point the camera at a book and when it looks focused and correctly, touch the screen.</string>
    <string name="titol_com_capturar">How to capture a book?</string>
    <string name="title_activity_llista_comentaris">LlistaComentaris</string>

    <string name="boto_comentaris">Book reviews (%1$d)</string>
    <string name="titol_comentaris">Reviews of %1$s</string>
    <string name="hint_opinion">Write your opinion...</string>
    <string name="no_comentaris">Be the first to review this book!</string>
    <string name="publicant_comentari_titol">Publishing...</string>
    <string name="publicant_comentari_text">Publishing review...</string>
    <string name="login_boto">Login or sign up</string>
    <string name="text_about">App created by Sergi Cañuelo. \n\n You can contact with me here: sergicx96@gmail.com</string>

</resources>