<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.visionbook.sergi.visionbook.mestre_llibre.LlibreDetall"
    tools:showIn="@layout/activity_llibre_detall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editorial"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvEditorial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nom editorial" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num_pags"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvNumPag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="328" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_publicacio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2003/05/18" />
                </TableRow>

            </TableLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sinopsis"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvResum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Resum del llibre..." />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnObrirComentaris"
            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boto_comentaris"
            android:textAlignment="center"
            android:textSize="18sp" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>